--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 <div class="mat-app-background">
-  <app-root>loading</app-root>
+    <app-root>
+      ... loading ...
+    </app-root>
 </div>
 </body>
 </html>
